Tested and fitted on all but unknowns

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ data/military/MII_v4.0_Codebook.pdf
 data/military/qt0hw410xz.pdf
 data/military/The Directed Dyadic Interstate War Dataset Codebook.pdf
 data/sec financials/2020q1.zip
+data/fishing boats/fishing-vessels-v1.csv
